# Pasjans-projekt-koncowy

./: CMakeLists.txt  boardController.cpp  boardController.h  boardView.cpp  boardView.h  card.cpp  card.h  introController.cpp  introController.h  introView.cpp  introView.h  main.cpp  notes  plansza.cpp  plansza.h  segregacja.cpp  segregacja.h  solitaireBoard.cpp  solitaireBoard.h  solitaireManager.cpp  solitaireManager.h  talia.cpp  talia.h
